update code 77.Combinations(medium) of leetCode